log/build_2024-05-18_19-56-51/robotics/stderr.log
  File "/home/paolo/ros2_ws/install/robotics/lib/python3.10/site-packages/robotics/variable_robot_kinematics.py", line 114
    robot = Robot(RevoluteJoint(), RevoluteJoint(theta_offset=1.57 l_offset=1))
                                                              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

